# lab_2_aisd

./: CMakeLists.txt  lab_2 c++.cpp  lab_2 c++.h
